Working on Profile page

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -299,6 +299,64 @@ footer {
 /* END FAQs PAGE LESS */
 
 
+/* START PROFILE LESS */
+
+.profile-main-wrapper {
+	.edec-profile {
+		width: 100%;
+		height: 250px;
+		background-color: @grey;
+		// background: url('../images/login_logo.png') no-repeat center;
+		// background-size: contain;
+
+		.profile-left {
+			float: left;
+			text-align: left;
+
+
+			h2 {
+				margin-left: 30px;
+				margin-top: 30px;
+				
+			}
+
+			article {
+				margin-left: 60px;
+				padding-top: 5px;
+			}
+
+
+
+			
+		}
+
+
+		.profile-right {
+			text-align: left;
+			float: right;
+			background-color: @darkerGrey;
+
+			h2 {	
+				margin-right: 120px;
+				margin-top: 30px;
+				margin-left: 30px;
+			}
+			p {
+				height: 25px;
+				text-align: left;
+				margin-left: 60px;		
+			}
+
+		}
+
+	}
+
+
+}
+
+
+/* END PROFILE LESS */
+
 /* START HOMEPAGE LESS */
 .homepage-main-wrapper {
 	.slider-wrapper {
