--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -240,7 +240,7 @@ footer {
 	background-color: @grey;
 
 	img  {
-		max-height: 100%;
+		height: 100%;
 	}
 
 	a {
@@ -888,6 +888,18 @@ footer {
 	}
 }
 
+@media screen and (max-width: 1103px) {
+	.product-main-wrapper .comment {
+		.comm-right {
+			top: 4px;
+  			left: 43%;
+		}
+
+	}
+}
+
+
+
 /* END MEDIA QUERIES */
 
 /*START ABOUT LESS*/
@@ -926,3 +938,157 @@ footer {
 	}
 }
 /*END PRIVACY LESS*/
+
+/*START PRODUCT LESS*/
+
+.product-main-wrapper {
+
+	.product {
+		width: 100%;
+		height: 400px;
+		border: 2px solid @darkBlue;
+		padding: 15px;
+		margin-bottom: 10px;
+
+		.product-left {
+			width: 45%;
+			height: 400px;
+			float: left;
+			padding-right: 15px;
+			display: inline-block;
+			text-align: center;
+
+			.product-left-up {
+				width: 100%;
+				height: 280px;
+
+				img {
+				max-width: 100%;
+				height: 280px;
+				position: relative;
+				display: inline;
+				vertical-align: middle;
+					}
+			}
+
+			.product-left-down {
+				width: 100%;
+				height: 25px;
+				display: inline-block;
+				margin-top: 20px;
+
+				img {
+					max-width: 100%;
+					height: 100%;
+					position: relative;
+					display: inline;
+					vertical-align: middle;
+				}
+			}
+		}
+
+		.product-right {
+			width: 55%;
+			display: inline-block;
+
+			.product-right-up {
+				height: 260px;
+				text-align: center;
+				p {
+					margin-top: 30px;
+				}
+
+			}
+
+			.product-right-down {
+
+				.product-price {
+					text-align: right;
+					margin-right: 30px;
+					font-size: 30px;
+				}
+				.product-cart {
+					float: right;
+					width: 150px;
+					background-color: @darkBlue;
+					color: @white;
+
+					p {
+						text-align: center;
+						vertical-align: middle;
+						margin-top: 5px;
+						font-size: 20px;
+					}
+					&:hover {
+						background-color: @lightGreen;
+						color: @darkBlue;
+					}
+				}
+			}
+		}
+	}
+
+	.comment {
+		width: 100%;
+		height: 140px;
+		border: 2px solid @darkBlue;
+		display: inline-block;
+		position: relative;
+
+		.comm-left {
+			width: 84%;
+			height: 100%;
+			margin-right: 5px;
+			float: left;
+
+			.comm-left-up {
+				width: 50%;
+				height: 30px;
+				margin-bottom: 5px;
+
+				p {
+				text-align: center;
+				margin-top: 5px;
+			}
+
+				.comm-left-up-name {
+					width: 50%;
+					height: 100%;
+					color: @darkBlue;
+					background-color: @grey;
+					float: left;
+				}
+
+				.comm-left-up-date {
+					width: 50%;
+					height: 100%;
+					color: @white;
+					background-color: @darkBlue;
+					float: right;
+				}
+			}
+			.comm-left-down {
+				height: 110px;
+				margin-bottom: 5px;
+				text-align: right;
+			}
+		}
+
+		.comm-right {
+			height: 15px;
+			position: absolute;
+			bottom: 10px;
+			right: 10px;
+
+			img {
+					max-width: 100%;
+					height: 100%;
+					position: relative;
+					display: inline;
+					vertical-align: middle;
+				}
+		}
+	}
+}
+
+/*END PRODUCT LESS*/
