--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -361,8 +361,66 @@ footer {
 		}
 
 	}
+	.edit-profile {
+		width: 100%;
+		height: 180px;
+
+		.profile-info {
+
+			form  {
+				position: relative;
+				width: 75%;
+				margin: 0 auto;
+
+				label, input, textarea, select {
+					width: 100%;
+				}
+
+				label {
+					font-size: 20px;
+					color: @darkBlue;
+				}
+
+				input, select, textarea {
+					color: @white;
+					color: @darkBlue;
+					 background-color: @grey;
+					border: 2px solid darken(@darkBlue, 20%);
+					border: 2px solid @darkBlue;
+					padding: 5px 10px;
+					margin-bottom: 10px;
+					margin-top: 5px;
+				}
+
+				input, select {
+					height: 40px;
+				}
+
+				textarea {
+					min-width: 100%;
+					max-width: 100%;
+					max-height: 150px;
+				}
+
+				.profile-button {
+					color: @white;
+					background-color: @darkBlue;
+					border: 2px solid darken(@darkBlue, 20%);
+					padding: 10px 20px;
+					font-weight: bold;
+					font-size: 18px;
+					float: right;
+
+					&:hover {
+						cursor: pointer;
+					}
+				}
+			}
+
+		}
 
 
+	}
 }
 
 
