--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,6 +1,6 @@
 <section class='main-wrapper profile-main-wrapper'>
 	<section class='profile'>
-		<article class="edec-profile">
+		<article class="edec-profile" >
 			<span class="hidden-product-number">
 			{{Profile.id_users}}
 			</span>
@@ -16,7 +16,7 @@
 				{{Profile.birthday}} </article>
 				<article ng-if='Profile.mail'>
 				{{Profile.mail}} </article>
-				<article ng-if='if Profile.address'>
+				<article ng-if='Profile.address'>
 				{{Profile.address}} </article>
 			</div> 
 
@@ -40,14 +40,14 @@
 
 		<h2>Edit user data </h2>
 		<form class='edit-profile-info-form' method='post' action='/api/profile'>
-				<label for='first-name'>First Name: <input type='text' id='first-name' name='first_name' /></label>
-				<label for='last-name'>Last Name: <input type='text' id='last-name' name='last_name' /></label>
-				<label for='adresss'>Address: <textarea id='address' name='address'></textarea></label>
-				<label for='username'>Username: <input type='username' id='username' name='username' /></label>
-				<label for='password'>Password: <input type='password' id='password' name='password' /></label>
-				<label for='repeat-password'>Repeat password: <input type='password' id='repeat-password' name='repeat_password' /></label>
-				<label for='mail'>Email address: <input type='email' id='mail' name='mail'/></label>
-				<span class='profile-button submit-edit-info'>Register</span>
+				<label for='first-name'>First Name: <input type='text' id='first-name' name='first_name' value='{{Profile.name}}'  /></label>
+				<label for='last-name'>Last Name: <input type='text' id='last-name' name='last_name' value='{{Profile.lastname}}'  /></label>
+				<label for='adresss'>Address: <textarea id='address' name='address' value='{{Profile.address}}' ></textarea></label>
+				<!-- <label for='username'>Username: <input type='username' id='username' name='username' value='{{Profile.username}}' /></label> -->
+				<label for='password'>New Password: <input type='password' id='password' name='password' /></label>
+				<label for='repeat-password'>Repeat new password: <input type='password' id='repeat-password' name='repeat_password' /></label>
+				<label for='mail'>Email address: <input type='email' id='mail' name='mail' value='{{Profile.mail}}'/></label>
+				<span class='profile-button submit-edit-info'>Save</span>
 		</form>
 		</article>
 	</section>
