--- a/public/views/register.html
+++ b/public/views/register.html
@@ -48,7 +48,7 @@
 						<option value='female'>Female</option>
 					</select>
 				</label>
-				<label for='birthday'>Birthday: <input type='date' id='birthday' name='birthday' /></label>
+				<label for='birthday'>Birthday: <input type='text' id='birthday' name='birthday' /></label>
 				<label for='adresss'>Address: <textarea id='address' name='address'></textarea></label>
 				<span class='registration-button go-to-mandatory-registration'>Back</span>
 				<span class='registration-button submit-registration'>Register</span>
