--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -18,6 +18,7 @@ body {
 	font-family: steinerlight;
 	visibility: hidden;
 	position: relative;
+	// letter-spacing: 2px;
 }
 
 a, a:hover, a:active, a:focus {
@@ -606,6 +607,7 @@ footer {
 				height: 100%;
 				float: right;
 				padding: 10px;
+				// font-size: 13px;
 
 				&:first-child {
 					float: left;
@@ -617,6 +619,7 @@ footer {
 					text-align: center;
 					margin-top: 5px;
 					font-size: 20px;
+					// font-size: 18px;
 				}
 
 				img {
@@ -629,7 +632,7 @@ footer {
 		}
 	}
 }
-/* START HOMEPAGE LESS */
+/* END HOMEPAGE LESS */
 
 
 
@@ -751,7 +754,7 @@ footer {
 	}
 }
 
-/* END LOGIN  LESS */
+/* END LOGIN LESS */
 
 
 /*START PRODUCTS LESS*/
@@ -1050,7 +1053,7 @@ footer {
 
 			.product-left-down {
 				width: 100%;
-				height: 25px;
+				height: 20px;
 				display: inline-block;
 				margin-top: 20px;
 
@@ -1081,7 +1084,6 @@ footer {
 
 				.product-price {
 					text-align: right;
-					margin-right: 30px;
 					font-size: 30px;
 				}
 				.product-cart {
