--- a/public/views/register.html
+++ b/public/views/register.html
@@ -2,7 +2,7 @@
 
 	<div class="error-message" ng-if='errorCode == 1'>
 		<ul>
-			<li>The username is already in use !</li>
+			<li>The username or email is already in use !</li>
 		</ul>
 	</div>
 	<div class="error-message" ng-if='errorCode == 2'>
