--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -49,6 +49,19 @@ a, a:hover, a:active, a:focus {
     vertical-align: middle;
 }
 
+.pagination-centered {
+	text-align: center;
+
+	a {
+		display: inline-block;
+		margin-left: 50px;
+
+		&:first-child {
+			margin-left: 0;
+		}
+	}
+}
+
 .error-message {
 	background-color: rgba(242, 23, 23, 0.13);
   	border: 2px solid rgba(230, 0, 0, 0.42);
@@ -318,6 +331,7 @@ footer {
 		width: 100%;
 		height: 250px;
 		background-color: @grey;
+		margin-top: 20px;
 		// background: url('../images/login_logo.png') no-repeat center;
 		// background-size: contain;
 
@@ -364,14 +378,15 @@ footer {
 	}
 	.edit-profile {
 		width: 100%;
-		height: 180px;
 
 		.profile-info {
+			text-align: center;
 
 			form  {
 				position: relative;
 				width: 75%;
 				margin: 0 auto;
+				display: inline-block;
 
 				label, input, textarea, select {
 					width: 100%;
@@ -380,12 +395,13 @@ footer {
 				label {
 					font-size: 20px;
 					color: @darkBlue;
+					text-align: left;
 				}
 
 				input, select, textarea {
 					color: @white;
 					color: @darkBlue;
-					 background-color: @grey;
+					background-color: @grey;
 					border: 2px solid darken(@darkBlue, 20%);
 					border: 2px solid @darkBlue;
 					padding: 5px 10px;
@@ -763,19 +779,6 @@ footer {
 	.products{
 		height: 100%;
 		width: 100%;
-		
-		.pagination-centered {
-			text-align: center;
-
-				a {
-					display: inline-block;
-					margin-left: 50px;
-
-					&:first-child {
-						margin-left: 0;
-					}
-				}
-		}
 			
 		.title {
 			text-align: left;
@@ -1022,7 +1025,6 @@ footer {
 /*START PRODUCT LESS*/
 
 .product-main-wrapper {
-
 	.product {
 		width: 100%;
 		height: 400px;
@@ -1149,7 +1151,8 @@ footer {
 			.comm-left-down {
 				height: 110px;
 				margin-bottom: 5px;
-				text-align: right;
+				text-align: left;
+				padding-left: 10px;
 			}
 		}
 
@@ -1160,13 +1163,20 @@ footer {
 			right: 10px;
 
 			img {
-					max-width: 100%;
-					height: 100%;
-					position: relative;
-					display: inline;
-					vertical-align: middle;
-				}
+				max-width: 100%;
+				height: 100%;
+				position: relative;
+				display: inline;
+				vertical-align: middle;
+			}
 		}
+	}
+
+	.show-comments {
+		font-size: 14px;
+		float: right;
+		color: @darkBlue;
+		margin-right: 10px;
 	}
 }
 
