--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -327,37 +327,33 @@ footer {
 /* START PROFILE LESS */
 
 .profile-main-wrapper {
+
 	.edec-profile {
 		width: 100%;
-		height: 250px;
+		height: 330px;
 		background-color: @grey;
-		margin-top: 20px;
+		margin-top: 10px;
 		// background: url('../images/login_logo.png') no-repeat center;
 		// background-size: contain;
 
 		.profile-left {
+			height: 100%;	
 			float: left;
 			text-align: left;
 
-
 			h2 {
 				margin-left: 30px;
-				margin-top: 30px;
-				
+				margin-top: 20px;				
 			}
 
 			article {
 				margin-left: 60px;
 				padding-top: 5px;
-			}
-
-
-
-			
+			}		
 		}
 
-
 		.profile-right {
+			height: 100%;
 			text-align: left;
 			float: right;
 			background-color: @darkerGrey;
@@ -367,15 +363,31 @@ footer {
 				margin-top: 30px;
 				margin-left: 30px;
 			}
-			p {
-				height: 25px;
-				text-align: left;
-				margin-left: 60px;		
+
+			.friends-list {
+				height: 80%;
+				p {
+					text-align: left;
+					margin-left: 60px;	
+					margin-bottom: 2px;
+				}
 			}
 
-		}
+			.more-friends {
+				height: 20%;
+				vertical-align: center;
+				position: absolute;
 
+				p {
+					text-align: center;
+					background-color: @lightGreen;
+					margin-top: 17px;
+					margin-left: 80px;
+				}
+			}
+		}
 	}
+
 	.edit-profile {
 		width: 100%;
 
@@ -1109,6 +1121,74 @@ footer {
 		}
 	}
 
+
+	.add-comment {
+		width: 100%;
+		height: 50px;
+		margin-top: 20px;
+
+		.div-title-comm {
+		text-align: left;
+		}
+
+		.div-form-comm {
+		float: left;
+		width: 100%;
+		margin-bottom: 20px;
+		
+		form {
+			width: 100%;
+			position: relative;
+			margin: 0 auto;
+
+			input {
+				width: 100%;
+			}
+
+			.div1 {
+				width: 100%;
+				float: left;
+
+				label {
+					width: 100%;
+					font-size: 20px;
+					color: @darkBlue;
+				}
+
+				textarea {
+					width: 100%;
+					color: @white;
+					color: @darkBlue;
+					border: 2px solid darken(@darkBlue, 20%);
+					border: 2px solid @darkBlue;
+					padding: 5px 5px;
+				}
+			}
+
+			.div2 {
+				width: 100%;
+				float: left;
+				margin-bottom: 10px;
+
+				select {
+					height: 20%;
+					width: 15%;
+				}
+			}
+
+			.div3 {
+				width: 100%;
+				float: left;
+				margin-bottom: 10px;
+
+				button {
+					width: 15%;
+				}
+			}		
+		}
+	} 
+}
+
 	.comment {
 		width: 100%;
 		height: 140px;
@@ -1181,3 +1261,194 @@ footer {
 }
 
 /*END PRODUCT LESS*/
+
+
+
+/*START CAMPAIGNS LESS*/
+.campaigns-main-wrapper {
+	.campaigns {
+		height: 100%;
+		width: 100%;
+		// margin-right: 30px; 
+		// margin-left: 30px;
+		padding-left: 25px;
+		padding-right: 25px;
+
+		.title {
+			text-align: left;
+			margin-bottom: 20px;
+		}
+
+		.edec-campaign {
+			// width: 31%;
+			width: 240px;
+			height: 240px;
+			border: 2px solid @darkerGrey;
+			margin: 5px;
+			padding: 5px;
+			display: inline-block;
+			z-index: 10;
+
+			&:hover {
+				background-color: @grey;
+			}
+
+			.campaign-up {
+				height: 60%;
+				padding: 10px;
+				text-align: center;
+
+				img {
+				max-height: 100%;
+				max-width: 100%;
+				display: inline;
+				position: relative;
+				margin: 0 auto;
+				}
+			}
+			.campaign-down {
+				height: 40%;
+				text-align: center;
+				padding: 10px;
+				p {margin-bottom: 1.5px;}
+				.campaign-name {font-size: 15px;}
+				.nr-of-people {font-size: 15px;}
+				.campaign-type {font-size: 20px;}
+			}
+		}
+	}
+}
+/*END CAMPAIGNS LESS*/
+
+/*START CAMPAIGN LESS*/
+
+.campaign-main-wrapper {
+	.campaign {
+		.campaign-product {
+			width: 100%;
+		height: 400px;
+		border: 2px solid @darkBlue;
+		padding: 15px;
+		margin-bottom: 10px;
+
+		.div-product-left {
+			width: 45%;
+			height: 400px;
+			float: left;
+			padding-right: 15px;
+			display: inline-block;
+			text-align: center;
+
+			.div-product-left-up {
+				width: 100%;
+				height: 280px;
+
+				img {
+				max-width: 100%;
+				height: 280px;
+				position: relative;
+				display: inline;
+				vertical-align: middle;
+					}
+			}
+
+			.div-product-left-down {
+				width: 100%;
+				height: 20px;
+				display: inline-block;
+				margin-top: 20px;
+
+				img {
+					max-width: 100%;
+					height: 100%;
+					position: relative;
+					display: inline;
+					vertical-align: middle;
+				}
+			}
+		}
+
+		.div-product-right {
+			width: 55%;
+			display: inline-block;
+
+			.div-product-right-up {
+				height: 260px;
+				text-align: center;
+				p {
+					margin-top: 30px;
+				}
+
+			}
+
+			.div-product-right-down {
+				width: 100%;
+				.div-product-right-down-left {
+					width: 50%;
+					float: left;
+					.div-product-price {
+						text-align: center;
+						font-size: 30px;
+					}
+					.div-product-cart {
+						width: 150px;
+						background-color: @darkBlue;
+						color: @white;
+						margin-right: 30px;
+						margin-left: 30px;
+
+						p {
+							text-align: center;
+							vertical-align: middle;
+							margin-top: 5px;
+							font-size: 20px;
+						}
+						&:hover {
+							background-color: @lightGreen;
+							color: @darkBlue;
+						}
+					}
+				}
+				.div-product-right-down-right {
+					width: 50%;
+					float: right;
+					.campaign-type {
+						p {
+							font-size: 30px;
+							text-align: center;
+							vertical-align: middle;
+						}
+					}
+					.join-button {
+						width: 150px;
+						background-color: @darkBlue;
+						color: @white;
+						margin-right: 30px;
+						margin-left: 30px;
+						p {
+							text-align: center;
+							vertical-align: middle;
+							margin-top: 5px;
+							font-size: 20px;
+						}
+						&:hover {
+							background-color: @lightGreen;
+							color: @darkBlue;
+						}
+
+					}
+				}
+			}
+		}
+
+		}
+		.campaign-background {
+			h3 {
+				text-align: left;
+			}
+
+		}
+	}
+}
+
+/*END CAMPAIGN LESS*/
