--- a/public/views/product.html
+++ b/public/views/product.html
@@ -23,6 +23,42 @@
 		</div>
 	</section>
 
+	<section class='add-comment'>
+
+		<div class='div-title-comm'>
+			<h3>Add Comment</h3>
+		</div>	
+
+		<div class='div-form-comm'>
+			<form class='add-comment-form' method='post' action='/api/product/1'>
+
+				<div class = 'div1'>
+					<label for='commentForm'>  
+						<textarea id='commentForm' name='commentForm' required></textarea>
+					</label>
+				</div>
+				
+				<div class = 'div2'>
+					<select id='ratingForm' name='ratingForm' required>
+						<option value='Rating' selected hidden></option>
+						<option value="1">1</option>
+						<option value='2'>2</option>
+						<option value='3'>3</option>
+						<option value='4'>4</option>
+						<option value='5'>5</option>
+					</select>
+				</div>
+				
+				<input type='text' value="{{ Product.id_product }}" hidden name='productId' />
+				
+				<div class = 'div3'>
+					<button type='submit'>Add Comment</button>
+				</div>
+
+			</form>
+		</div>
+	</section> 
+
 	<section class= 'comment' ng-repeat='Comment in Comments'>
 		<div class= 'comm-left'>
 			<div class= 'comm-left-up'>
