--- a/public/views/product.html
+++ b/public/views/product.html
@@ -40,7 +40,7 @@
 				
 				<div class = 'div2'>
 					<select id='ratingForm' name='ratingForm' required>
-						<option value='Rating' selected hidden></option>
+						<option value='' selected hidden>Rating</option>
 						<option value="1">1</option>
 						<option value='2'>2</option>
 						<option value='3'>3</option>
