Campaign form page

--- a/public/views/campaign.html
+++ b/public/views/campaign.html
@@ -22,11 +22,11 @@
 			<div class = 'div-product-right-down'>
 				<div class = 'div-product-right-down-left'>
 					<div class = 'div-product-price'><p>{{Campaign.price}} RON</p></div>
-					<div class = 'div-product-cart'><p>Add to cart</p></div>
+					<button type = "button" id='product-cart'>Add to cart</button>
 				</div>
 				<div class = 'div-product-right-down-right'>
 					<div class = 'campaign-type'><p>{{Campaign.type}}</p></div>
-					<div class = 'join-button'><p>Join</p></div>
+					<button type = "button" id='join-button'>Join</button>
 				</div>
 			</div>
 		</div>
