--- a/public/views/products.html
+++ b/public/views/products.html
@@ -26,6 +26,7 @@
 						</span>
 					</div>
 					<div class = 'product-right-down-right'><p>Add to cart</p></div>
+					<!-- <button type = "button" id='product-cart'>Add to cart</button> -->
 				</div>
 			</div>
 			</a>
