--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -1058,11 +1058,11 @@ footer {
 
 				img {
 				max-width: 100%;
-				height: 280px;
+				max-height: 100%;
 				position: relative;
 				display: inline;
 				vertical-align: middle;
-					}
+				}
 			}
 
 			.product-left-down {
@@ -1095,26 +1095,52 @@ footer {
 			}
 
 			.product-right-down {
+				width: 100%;
 
-				.product-price {
-					text-align: right;
-					font-size: 30px;
-				}
-				.product-cart {
-					float: right;
-					width: 150px;
-					background-color: @darkBlue;
-					color: @white;
+				.product-right-down-left {
+					height: 100%;
+					width: 50%;
+					float: left;
 
-					p {
-						text-align: center;
-						vertical-align: middle;
-						margin-top: 5px;
+					button {
+
+						color: @white;
+						background-color: @darkBlue;
 						font-size: 20px;
-					}
-					&:hover {
+						vertical-align: middle;
+						margin-top: 56px;
+						margin-left: 55px;
+
+
+						&:hover {
 						background-color: @lightGreen;
 						color: @darkBlue;
+						}
+					}
+				}
+
+				.product-right-down-right {
+					width: 50%;
+					float: right;
+
+					.product-price {
+						text-align: right;
+						font-size: 30px;
+					}
+
+					button {
+
+						color: @white;
+						background-color: @darkBlue;
+						font-size: 20px;
+						vertical-align: middle;
+						margin-top: 3px;
+						margin-left: 75px;
+
+						&:hover {
+						background-color: @lightGreen;
+						color: @darkBlue;
+						}
 					}
 				}
 			}
@@ -1183,6 +1209,13 @@ footer {
 
 				button {
 					width: 15%;
+					color: @white;
+					background-color: @darkBlue;
+
+					&:hover {
+						color: @darkBlue;
+						background-color: @lightGreen;
+					}
 				}
 			}		
 		}
@@ -1325,7 +1358,7 @@ footer {
 .campaign-main-wrapper {
 	.campaign {
 		.campaign-product {
-			width: 100%;
+		width: 100%;
 		height: 400px;
 		border: 2px solid @darkBlue;
 		padding: 15px;
@@ -1390,22 +1423,20 @@ footer {
 						text-align: center;
 						font-size: 30px;
 					}
-					.div-product-cart {
-						width: 150px;
-						background-color: @darkBlue;
-						color: @white;
-						margin-right: 30px;
-						margin-left: 30px;
 
-						p {
-							text-align: center;
-							vertical-align: middle;
-							margin-top: 5px;
-							font-size: 20px;
-						}
+					button {
+
+						color: @white;
+						background-color: @darkBlue;
+						font-size: 20px;
+						vertical-align: middle;
+						margin-top: 5px;
+						margin-left: 50px;
+						margin-right: 30px;
+
 						&:hover {
-							background-color: @lightGreen;
-							color: @darkBlue;
+						background-color: @lightGreen;
+						color: @darkBlue;
 						}
 					}
 				}
@@ -1419,23 +1450,21 @@ footer {
 							vertical-align: middle;
 						}
 					}
-					.join-button {
-						width: 150px;
-						background-color: @darkBlue;
-						color: @white;
-						margin-right: 30px;
-						margin-left: 30px;
-						p {
-							text-align: center;
-							vertical-align: middle;
-							margin-top: 5px;
-							font-size: 20px;
-						}
-						&:hover {
-							background-color: @lightGreen;
-							color: @darkBlue;
-						}
 
+					button {
+
+						color: @white;
+						background-color: @darkBlue;
+						font-size: 20px;
+						vertical-align: middle;
+						margin-top: 5px;
+						margin-left: 82px;
+						margin-right: 30px;
+
+						&:hover {
+						background-color: @lightGreen;
+						color: @darkBlue;
+						}
 					}
 				}
 			}
@@ -1452,3 +1481,158 @@ footer {
 }
 
 /*END CAMPAIGN LESS*/
+
+/*START CAMPAIGNFORM LESS*/
+
+.campaignForm-main-wrapper {
+	height: 100%;
+	
+
+	.campaignForm {
+
+		.div-up {
+		border: 2px solid @darkBlue;
+		padding: 15px;
+		margin-bottom: 10px;
+		
+			.div-product-left {
+				width: 45%;
+				
+				float: left;
+				padding-right: 15px;
+				display: inline-block;
+				text-align: center;
+
+				.div-product-left-up {
+					width: 100%;
+					height: 280px;
+
+					img {
+					max-width: 100%;
+					max-height: 100%;
+					position: relative;
+					display: inline;
+					vertical-align: middle;
+					}
+				}
+
+				.div-product-left-down {
+					width: 100%;
+					height: 20px;
+					display: inline-block;
+					margin-top: 20px;
+
+					img {
+						max-width: 100%;
+						height: 100%;
+						position: relative;
+						display: inline;
+						vertical-align: middle;
+					}
+				}
+			}
+
+			.div-product-right {
+				width: 55%;
+				display: inline-block;
+
+				.div-product-right-up {
+					height: 260px;
+					text-align: center;
+					p {
+						margin-top: 30px;
+					}
+
+				}
+
+				.div-product-right-down {
+					width: 100%;
+
+					.div-product-right-down-left {
+						width: 50%;
+						float: left;
+						margin-right: 20px;
+
+						.div-product-price {
+							text-align: right;
+							font-size: 30px;
+						}
+
+						button {
+							color: @white;
+							background-color: @darkBlue;
+							font-size: 20px;
+							margin-left: 70px;
+
+							&:hover {
+								color: @darkBlue;
+								background-color: @lightGreen;
+							}
+						}
+					}
+
+					.div-product-right-down-right {
+					width: 45%;
+					float: right;
+					vertical-align: middle;
+					position: absolute;
+					margin-top: 20px;
+
+					.pro-con {
+						height: 50px;
+						width: 80px;
+						float: right;
+						padding: 0 5px;
+						font-size: 18px;	
+					}
+				}
+			}
+		}
+	}
+
+		.div-down {
+			
+			margin-top: 50px;
+			font-size: 20px;
+			position: relative;
+
+			.add-campaign {
+				width: 100%;
+				margin-bottom: 10px; 
+			}
+
+			input, textarea {
+				color: @white;
+				color: @darkBlue;
+				border: 2px solid darken(@darkBlue, 20%);
+				border: 2px solid @darkBlue;
+				padding: 5px 10px;
+				margin-bottom: 10px;
+				margin-top: 5px;
+				min-width: 100%;
+				max-width: 100%;
+			}
+
+			textarea {
+				min-height: 200px;
+				max-height: 300px;
+			}
+
+			button {
+				float: right;
+				color: @white;
+				background-color: @darkBlue;
+				border-color:@darkBlue;
+
+				&:hover {
+				color: @darkBlue;
+				background-color: @lightGreen;
+				border-color:@lightGreen;
+				}
+			}
+		}
+	}	
+}
+
+/*END CAMPAIGNFORM LESS*/
+
